Fix color contrast in links

--- a/src/components/StructuredNavigation/StructuredNavigation.scss
+++ b/src/components/StructuredNavigation/StructuredNavigation.scss
@@ -4,7 +4,7 @@
   margin-top: 20px;
 
   a {
-    color: $primaryDark;
+    color: $primaryGreenDark;
     transition: 0.25s;
 
     &:hover {
